fixed navbar item alignment

--- a/style.css
+++ b/style.css
@@ -8,7 +8,3 @@
     z-index: 100;
 }
 
-.navbar-nav .mr-auto {
-    display: flex;
-    justify-content: left;
-}
